# nexus-oasis

./: .gitignore  AGENTS.md  ANALIZ_RAPORU.md  ARCHITECTURE.md  ARSIV_MASTER_YAPILACAKLAR.md  CEVAHIR_AI_LLM_RAPORU.md  CHANGELOG.md  CODE_OF_CONDUCT.md  COMPARISON.md  COMPETITIVE_ANALYSIS.md  COMPREHENSIVE_GAP_REPORT.md.archive  CONTRIBUTING.md  CONTRIBUTORS.md  Cargo.toml  DEPLOYMENT.md  DISCORD_SERVER_GUIDE.md  Dockerfile  Dockerfile.dev  Dockerfile.minimal  ENTEGRASTON_HEDEFLERI.md  ENTERPRISE.md  FULL_SYSTEM_SCAN_REPORT.md.archive  GAP_ANALYSIS_DETAILED.md.archive  GOVERNANCE.md  GUNLUK_RAPOR_3.md  HACKTOBERFEST.md  INSTALL.md  INSTALL_GUIDE.md  LICENSE  MODEL_PROVIDERS.md  Makefile  NEWSLETTER_TEMPLATE.md  OPENCLAW_ANALYSIS.md  PERSONAL_AI_ROADMAP.md  QUICKSTART.md  RAKIP_ANALIZ_RAPORU.md  README.md  ROADMAP.md  SECURITY.md  SECURITY_DETAILED.md  (+27 more)
crates/oasis_autonomous/: Cargo.toml  Cargo.toml.bak
crates/oasis_autonomous/src/: agent_loop.rs  error.rs  healing.rs  lib.rs  memory.rs  orchestrator.rs  planner.rs  safety.rs  screen.rs  tools.rs  vision.rs  voice_control.rs
crates/oasis_brain/: Cargo.toml
crates/oasis_brain/src/: action.rs  cognitive_loop.rs  lib.rs  memory_bridge.rs  perception.rs  reasoning.rs
crates/oasis_browser/: Cargo.toml
crates/oasis_browser/src/: actions.rs  agent.rs  browser_ext.rs  error.rs  lib.rs  lightpanda_ffi.rs  observation.rs  profile.rs  proxy.rs  recap.rs  session.rs  sovereign.rs  stealth.rs  vgate.rs
crates/oasis_core/: Cargo.toml
crates/oasis_core/src/: contracts.rs  creusot.rs  lib.rs  monitor.rs  runtime.rs  state.rs
crates/oasis_hands/: Cargo.toml
crates/oasis_hands/src/: agent.rs  alert.rs  emergency.rs  error.rs  executor.rs  history.rs  input.rs  lib.rs  rate_limiter.rs  recorder.rs  sandbox.rs  screen.rs  sentient_tool.rs  session.rs  skill_loader.rs  sovereign.rs  time_rules.rs  tools.rs  vgate.rs  vision.rs
crates/oasis_manus/: Cargo.toml
crates/oasis_manus/src/: agent.rs  container.rs  error.rs  executor.rs  lib.rs  planner.rs  session.rs  sovereign.rs  tools.rs  vgate.rs
crates/oasis_vault/: Cargo.toml
crates/oasis_vault/src/: audit.rs  backends.rs  crypto.rs  lib.rs  secrets.rs  storage_backend.rs  vault.rs
crates/sentient_a2a/: Cargo.toml
crates/sentient_a2a/src/: agent.rs  error.rs  lib.rs  message.rs  protocol.rs  registry.rs  transport.rs
crates/sentient_agents/: Cargo.toml
crates/sentient_agents/src/: agents.rs  error.rs  farm.rs  lib.rs  orchestrator.rs
crates/sentient_anomaly/: Cargo.toml
crates/sentient_anomaly/src/: alert.rs  detector.rs  lib.rs  metrics.rs  profile.rs  timeseries.rs
crates/sentient_audit/: Cargo.toml
crates/sentient_audit/src/: lib.rs  storage.rs
crates/sentient_backup/: Cargo.toml
crates/sentient_backup/src/: backup.rs  crypto.rs  error.rs  lib.rs  manifest.rs  restore.rs  scheduler.rs  storage.rs
crates/sentient_benchmarks/: Cargo.toml
crates/sentient_benchmarks/benches/: agent_benchmark.rs  channel_benchmark.rs  memory_benchmark.rs  voice_benchmark.rs
crates/sentient_benchmarks/src/: agent.rs  channel.rs  config.rs  latency.rs  lib.rs  memory.rs  report.rs  throughput.rs  voice.rs
crates/sentient_browser/: Cargo.toml
crates/sentient_browser/src/: lib.rs  multi_browser.rs
crates/sentient_calendar/: Cargo.toml
crates/sentient_calendar/src/: client.rs  google.rs  lib.rs  models.rs  outlook.rs  preparation.rs  reminder.rs
crates/sentient_cevahir/: Cargo.toml  README.md
crates/sentient_cevahir/src/: bridge.rs  cognitive.rs  config.rs  error.rs  lib.rs  memory.rs  model.rs  python.rs  tokenizer.rs  tools.rs  types.rs
crates/sentient_channels/: Cargo.toml
crates/sentient_channels/src/: chime.rs  commands.rs  config.rs  discord.rs  google_chat.rs  imessage.rs  instagram.rs  lib.rs  line.rs  linkedin.rs  mattermost.rs  message.rs  messenger.rs  signal.rs  slack.rs  snapchat.rs  teams.rs  telegram.rs  tests.rs  twitter.rs  viber.rs  voice_handler.rs  webex.rs  webhook.rs  wechat.rs  whatsapp.rs  zoom.rs
crates/sentient_checkpoint/: Cargo.toml
crates/sentient_checkpoint/src/: chain.rs  lib.rs  ratchet.rs  recovery.rs
crates/sentient_cli/: Cargo.toml
crates/sentient_cli/src/: gui.rs  lib.rs  main.rs
crates/sentient_cluster/: Cargo.toml
crates/sentient_cluster/src/: agent.rs  crds.rs  health.rs  lib.rs  metrics.rs  operator.rs  task.rs  tests.rs
crates/sentient_compliance/: Cargo.toml
crates/sentient_compliance/src/: audit.rs  controls.rs  evidence.rs  lib.rs  monitor.rs  report.rs  trust_criteria.rs
crates/sentient_connectors/: Cargo.toml
crates/sentient_context/: Cargo.toml
crates/sentient_core/: Cargo.toml
crates/sentient_daemon/: Cargo.toml
crates/sentient_desktop/: Cargo.toml
dashboard/: Cargo.toml  README.md  command-center.html
dashboard/assets/: index.html
dashboard/src/: api.rs  main.rs  skill_loader.rs  skills_hub.rs  tool_monitor.rs  vgate_panel.rs  ws.rs
dashboard/templates/: agents.html  channels.html  llm-providers.html  permissions.html  setup.html  voice.html
docs/: API.md  (+13 more)
skills/: Cargo.toml  SKILLS_INDEX.md  analysis.rs  automation.rs  codegen.rs  lib.rs  research.rs
skills/Automation/: Calendar  Productivity  Smart-Home
skills/Dev/: CLI-Tools  Coding-Agents  DevOps-Cloud  Git-GitHub  Web-Frontend  iOS-macOS
skills/Gaming/: Gaming  Moltbook  Personal-Dev
skills/Media/: Image-Video-Gen  Speech  Streaming
skills/Mobile/: Health-Fitness  Shopping  Transportation
skills/OSINT/: Browser-Automation  Data-Analytics  Search-Research
skills/Productivity/: Apple-Apps  Notes-PKM  PDF-Documents
skills/Security/: Security-Passwords
skills/Social/: Communication  Marketing-Sales
skills/analysis/: skill.toml
skills/automation/: skill.toml
skills/code-review/: SKILL.md  skill.json  skill.yaml
skills/codegen/: skill.toml
skills/competitor-analyzer/: SKILL.md  skill.json  skill.yaml
skills/debug-helper/: SKILL.md  skill.json  skill.yaml
skills/git-workflow/: SKILL.md  skill.json  skill.yaml
skills/research/: skill.toml
skills/web-researcher/: SKILL.md  skill.json  skill.yaml
(+6874 files in other folders)
