[workspace]
members = [
    # Core Intelligence (Gemma 4 Kernel)
    "crates/oasis_brain",
    # Security Modules (Military Grade)
    "crates/oasis_core",
    "crates/oasis_vault",
    "crates/sentient_tee",
    "crates/sentient_zk_mcp",
    "crates/sentient_anomaly",
    # Core Modules
    "crates/sentient_research",
    "crates/oasis_hands",
    "crates/sentient_core",
    "crates/sentient_memory",
    "crates/sentient_vgate",
    "crates/sentient_guardrails",
    "crates/sentient_python",
    "crates/sentient_common",
    "crates/sentient_graph",
    "crates/sentient_cli",
    "crates/sentient_sandbox",
    "crates/sentient_orchestrator",
    "crates/sentient_gateway",
    "crates/sentient_scout",
    "crates/sentient_forge",
    "crates/sentient_storage",
    "crates/oasis_browser",
    "crates/oasis_manus",
    "crates/sentient_ingestor",
    # A1-A8 Native Modules
    "crates/sentient_persona",
    "crates/sentient_session",
    "crates/sentient_checkpoint",
    "crates/sentient_modes",
    "crates/sentient_reporting",
    # Self-Coding Loop
    "crates/sentient_selfcoder",
    # v3.0.0 New Modules
    "crates/sentient_agents",
    "crates/sentient_vector",
    "crates/sentient_local",
    "crates/sentient_devtools",
    "crates/sentient_execution",
    # v4.0.0 Universal Omni-Gateway
    "crates/sentient_setup",
    "crates/sentient_settings",
    # v5.0.0 Silent Auto-Update Engine
    "crates/sentient_sync",
    # v6.0.0 Skills System (DeerFlow Integration)
    "crates/sentient_skills",
    # v7.0.0 Cevahir AI Integration (Turkish LLM Cognitive Engine)
    "crates/sentient_cevahir",
    # v8.0.0 Channel Integrations (Telegram, Discord, WhatsApp)
    "crates/sentient_channels",
    # v8.0.0 Voice Module (Whisper STT + TTS)
    "crates/sentient_voice",
    # v8.0.0 Skills Marketplace
    "crates/sentient_marketplace",
    # v9.0.0 Wake Word Detection (Porcupine, Vosk, Whisper)
    "crates/sentient_wake",
    # v9.0.0 Skills Importer (ClawHub compatible)
    "crates/sentient_skills_import",
    # v9.0.0 Kubernetes Operator (Distributed Agents)
    "crates/sentient_cluster",
    # v10.0.0 LanceDB Memory (Long-term Context)
    "crates/sentient_lancedb",
    # v11.0.0 Enterprise Features (RBAC, Audit, SSO)
    "crates/sentient_enterprise",
    # v11.0.0 Performance Benchmarks
    "crates/sentient_benchmarks",
    # v12.0.0 Observability (OpenTelemetry, Prometheus)
    "crates/sentient_observability",
    # v13.0.0 Internationalization (i18n)
    "crates/sentient_i18n",
    # v14.0.0 Autonomous Desktop Agent
    "crates/oasis_autonomous",
    # v15.0.0 MCP Protocol (Model Context Protocol)
    "crates/sentient_mcp",
    # v16.0.0 Vision/Multimodal Support
    "crates/sentient_vision",
    # v17.0.0 Plugin/Extension System
    "crates/sentient_plugin",
    # v18.0.0 Native RAG Engine
    "crates/sentient_rag",
    # v19.0.0 Fine-tuning Support
    "crates/sentient_finetuning",
    # v20.0.0 Web Server
    "crates/sentient_web",
    "crates/sentient_backup",
    "crates/sentient_dr",
    # v21.0.0 SOC 2 Compliance
    "crates/sentient_compliance",
    # v22.0.0 SLA Monitoring
    "crates/sentient_sla",
    # v23.0.0 Web Search Integration (Tavily, Brave, DuckDuckGo)
    "crates/sentient_search",
    # v24.0.0 Structured Output & JSON Schema
    "crates/sentient_schema",
    # v25.0.0 Groq LPU Integration (Ultra-fast inference)
    "crates/sentient_groq",
    # v27.0.0 Image Generation (DALL-E, SD, Flux)
    "crates/sentient_image",
    # v28.0.0 Agentic Patterns (ReAct, CoT, ToT)
    "crates/sentient_patterns",
    # Skills System
    "skills",
    "scripts",
    "dashboard",
]
resolver = "2"

[workspace.package]
version = "4.0.0"
edition = "2021"
authors = ["Pi <sentient@sentient-os.ai>"]
license = "MIT"

[workspace.dependencies]

# Common
tokio = { version = "1", features = ["full"] }

serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "serde"] }
log = "0.4"
env_logger = "0.11"
thiserror = "2"
chrono = { version = "0.4", features = ["serde"] }
rusqlite = { version = "0.35", features = ["bundled"] }

# V-Gate / HTTP
reqwest = { version = "0.12", features = ["json", "rustls-tls", "multipart"], default-features = false }
axum = { version = "0.8", features = ["ws"] }
tower = "0.5"
tower-http = "0.6"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# PyO3 bridge
pyo3 = { version = "0.25", features = ["auto-initialize"] }

# Async traits
async-trait = "0.1"
futures = "0.3"

# Random number generation
rand = "0.8"

# Error handling
anyhow = "1"

# Graph / Concurrency
crossbeam = "0.8"
parking_lot = "0.12"

# CLI
clap = { version = "4", features = ["derive"] }

# Guardrails / Regex
regex = "1"
lazy_static = "1"
