[package]
name = "dashboard"
version = "3.2.0"
edition = "2021"
description = "SENTIENT War Room v3.2.0 - OpenClaw Enterprise | Matte Dark Theme"
authors = ["SENTIENT Core Team"]

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = "0.3"
reqwest = { workspace = true }
walkdir = "2.5"
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true, features = ["fs", "cors"] }
futures = "0.3"
sysinfo = "0.30"
rand = "0.8"

[[bin]]
name = "nexus-dashboard"
path = "src/main.rs"
