[package]
name = "sentient-skills"
version = "0.1.0"
edition = "2021"
description = "SENTIENT Skills - Modüler yetenek sistemi"

[lib]
path = "lib.rs"

[dependencies]
sentient_core = { path = "../crates/sentient_core" }
sentient_common = { path = "../crates/sentient_common" }
sentient_python = { path = "../crates/sentient_python" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
log = "0.4"
toml = "0.8"
