[package]
name = "oasis_vault"
version.workspace = true
edition.workspace = true
description = "OASIS Vault - Secure Secrets Manager with Creusot Contracts"

[dependencies]
sentient_common = { path = "../sentient_common" }
oasis_core = { path = "../oasis_core" }

# Async runtime
tokio.workspace = true
async-trait = "0.1"

# Serialization
serde.workspace = true
serde_json.workspace = true

# IDs
uuid.workspace = true

# Errors
thiserror.workspace = true
anyhow.workspace = true

# Logging
log.workspace = true

# Time
chrono.workspace = true

# Crypto
aes-gcm = "0.10"
argon2 = "0.5"
blake3 = "1.5"
hex = "0.4"
rand.workspace = true
zeroize = "1.8"
base64 = "0.22"
constant_time_eq = "0.3"

# Concurrency
parking_lot.workspace = true

# HTTP client (for external backends)
reqwest = { version = "0.12", features = ["json"] }

# URL encoding (for AWS)
urlencoding = "2.1"

[features]
default = []

# External backend support
hashicorp_vault = []
aws = []
azure = []

# Hardware security
hardware_security = []

[dev-dependencies]
tempfile = "3.10"
