[package]
name = "sentient_a2a"
version.workspace = true
edition.workspace = true
description = "SENTIENT A2A Protocol - Agent-to-Agent Communication"
authors = ["SENTIENT Core Team"]

[dependencies]
sentient_common = { path = "../sentient_common" }

# Async
tokio.workspace = true
async-trait = "0.1"

# Serialization
serde.workspace = true
serde_json.workspace = true

# Time
chrono.workspace = true

# UUID
uuid.workspace = true

# Logging
log.workspace = true

# Error handling
thiserror.workspace = true
anyhow.workspace = true

# HTTP client
reqwest = { version = "0.12", features = ["json"] }

# WebSocket
tokio-tungstenite = "0.29"

# Futures
futures-util = "0.3"

[features]
default = []
websocket = []
http = []
