[package]
name = "sentient_agents"
version.workspace = true
edition = "2021"
description = "SENTIENT Multi-Agent Orchestration - CrewAI, AutoGen, Swarm, MetaGPT Integration"
authors = ["SENTIENT Core Team"]

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
async-trait = "0.1"
uuid = { version = "1.7", features = ["v4", "serde"] }
thiserror = "1.0"

# PyO3 for Python bindings
pyo3 = { version = "0.25", features = ["auto-initialize"], optional = true }

[features]
default = []
python-bindings = ["pyo3"]

[lib]
name = "sentient_agents"
path = "src/lib.rs"
