[package]
name = "sentient_audit"
version = "4.0.0"
edition = "2021"
description = "SENTIENT Audit Logging System"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt"] }
