[package]
name = "sentient_benchmarks"
version = "0.1.0"
edition = "2021"
description = "Performance benchmarks for SENTIENT AI OS"
license = "MIT OR Apache-2.0"

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }
criterion = { version = "0.5", features = ["async_tokio", "html_reports"] }
statrs = "0.16"
sysinfo = "0.30"
tracing = "0.1"
tracing-subscriber = "0.3"

# Internal crates
sentient_core = { path = "../sentient_core" }
sentient_memory = { path = "../sentient_memory" }
sentient_lancedb = { path = "../sentient_lancedb" }

[[bench]]
name = "memory_benchmark"
harness = false

[[bench]]
name = "agent_benchmark"
harness = false

[[bench]]
name = "channel_benchmark"
harness = false

[[bench]]
name = "voice_benchmark"
harness = false
