[package]
name = "sentient_browser"
version = "4.0.0"
edition = "2021"
description = "SENTIENT Multi-Browser Automation"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
