[package]
name = "sentient_calendar"
version = "0.1.0"
edition = "2021"
description = "Calendar Integration - Google Calendar + Outlook API for JARVIS-like scheduling"
authors = ["SENTIENT OS Team"]

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true, features = ["serde"] }
uuid = { workspace = true }
tracing = { workspace = true }
async-trait = { workspace = true }
thiserror = { workspace = true }
reqwest = { workspace = true }

[dev-dependencies]
tokio-test = "0.4"
