[package]
name = "sentient_channels"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "SENTIENT Channel Integrations (Telegram, Discord, WhatsApp, etc.)"

[dependencies]
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
reqwest.workspace = true
async-trait.workspace = true
thiserror.workspace = true
log.workspace = true
chrono.workspace = true
uuid.workspace = true

# Voice integration
sentient_voice = { path = "../sentient_voice" }

# Telegram Bot API
teloxide = { version = "0.13", default-features = false, features = ["rustls"] }

# Discord (via serenity)
serenity = { version = "0.12", default-features = false, features = [
    "builder", "cache", "chrono", "client", "framework", "gateway", "http",
    "model", "standard_framework", "utils", "rustls_backend"
] }

# WebSocket for real-time
tokio-tungstenite = { version = "0.24", features = ["rustls-tls-webpki-roots"] }
futures.workspace = true

# URL parsing
url = "2"

# Regex for command parsing
regex.workspace = true

# Crypto for signature verification
hmac = "0.12"
sha1 = "0.10"
sha2 = "0.10"
hex = "0.4"

# URL encoding
urlencoding = "2"

sentient_common = { path = "../sentient_common" }

[features]
default = ["telegram", "discord"]
telegram = []
discord = []
whatsapp = []
