[package]
name = "sentient_checkpoint"
version = "0.1.0"
edition = "2021"
description = "A4 Ratchet Pattern - Native Progress Checkpoint System for SENTIENT"
authors = ["NEXUS OASIS"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1.0"
tracing = "0.1"
sha2 = "0.10"
hex = "0.4"
fs2 = "0.4"

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3.0"
