[package]
name = "sentient_cluster"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "SENTIENT Kubernetes Operator - Distributed AI Agents"

[dependencies]
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
log.workspace = true
async-trait.workspace = true
futures.workspace = true
chrono.workspace = true

# Kubernetes
kube = { version = "0.94", features = ["runtime", "derive"] }
k8s-openapi = { version = "0.22", features = ["v1_29"] }
schemars = "0.8"

# Metrics
prometheus = "0.13"
lazy_static = "1"

# Health checks
axum = "0.8"
tower = "0.5"

sentient_common = { path = "../sentient_common" }
tracing = "0.1"
