[package]
name = "sentient_compliance"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "SENTIENT SOC 2 Compliance - Audit, Controls, and Certification Framework"

[dependencies]
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
async-trait.workspace = true
thiserror.workspace = true
log.workspace = true
chrono.workspace = true
uuid.workspace = true

# Crypto
sha2 = "0.10"
sha3 = "0.10"
blake3 = "1"

# HTTP client
reqwest.workspace = true

# Audit logging
tracing = "0.1"
tracing-subscriber = "0.3"

sentient_common = { path = "../sentient_common" }

[features]
default = ["soc2"]
soc2 = []
gdpr = []
hipaa = []
iso27001 = []
